--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 13px;
+    outline: none;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+*:not(input),
+*:not(textarea) {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select: none;
+}
+
+input[type=number],
+button {
+    -webkit-appearance: none;
+    -moz-appearance: textfield;
+}
+input[type=number]::-webkit-outer-spin-button,
+button::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button,
+button::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: textfield;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    min-width: 100%;
+    position: relative;
+}
+
+button {
+    cursor: pointer;
+}
